--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
 		"squizlabs/php_codesniffer": "3.6.0",
 		"wp-coding-standards/wpcs": "~2.3.0",
-		"phpcompatibility/phpcompatibility-wp": "~2.1.3"
+		"phpcompatibility/phpcompatibility-wp": "~2.1.3",
+        "rector/rector": "^1.2"
     },
     "config": {
         "allow-plugins": {
